==> IRNAS/irnas-t5838-driver/drivers/t5838/t5838_aad_mode.c <==
#include "t5838.h"
#include <zephyr/device.h>
#include <zephyr/logging/log.h>
#define DT_DRV_COMPAT invensense_t5838_nrf_pdm
#define T5838_INST_HAS_MICEN_OR(inst) DT_INST_NODE_HAS_PROP(inst, micen_gpios) ||
#define T5838_ANY_INST_HAS_MICEN      DT_INST_FOREACH_STATUS_OKAY(T5838_INST_HAS_MICEN_OR) 0
#define T5838_FAKE2C_START_PILOT_CLKS 10
#define T5838_FAKE2C_ZERO	      1 * T5838_FAKE2C_START_PILOT_CLKS
#define T5838_FAKE2C_ONE	      3 * T5838_FAKE2C_START_PILOT_CLKS
#define T5838_FAKE2C_STOP	      130 /* according to datasheet >128clk cycles */
#define T5838_FAKE2C_SPACE	      1 * T5838_FAKE2C_START_PILOT_CLKS
#define T5838_FAKE2C_POST_WRITE_CYCLES 60 /* According to datasheet >50clk cycles */
#define T5838_FAKE2C_PRE_WRITE_CYCLES  60 /* According to datasheet >50clk cycles */
#define T5838_FAKE2C_DEVICE_ADDRESS    0x53
#define T5838_FAKE2C_CLK_PERIOD_US 10 /* approx 100kHz */
#define T5838_ENTER_SLEEP_MODE_CLOCKING_TIME_US 2500
#define T5838_ENTER_SLEEP_MODE_CLK_PERIOD_US	10 /* approx 100kHz */
#define T5838_RESET_TIME_MS 10 /* Time required for device to reset when power is disabled*/

void prv_clock_bitbang(const struct device *dev, uint16_t cycles, uint16_t period)
{
	const struct t5838_aad_drv_cfg *drv_cfg = dev->config;
	for (int i = 0; i < cycles; i++) {
		gpio_pin_set_dt(&drv_cfg->pdmclk, 1);
		k_busy_wait(period / 2);
		gpio_pin_set_dt(&drv_cfg->pdmclk, 0);
		k_busy_wait(period / 2);
	}
}

int prv_reg_write(const struct device *dev, uint8_t reg, uint8_t data)
{
	const struct t5838_aad_drv_cfg *drv_cfg = dev->config;
	/** Make sure there is no PDM transfer in progress, and we can take clock signal */
	struct t5838_drv_data *pdm_data = drv_cfg->pdm_dev->data;
	if (pdm_data->active) {
		LOG_ERR("Cannot write to device while pdm is active");
		return -EBUSY;
	}

	LOG_DBG("prv_reg_write, reg: 0x%x, data: 0x%x", reg, data);

	/**prepare data */
	uint8_t wr_buf[] = {T5838_FAKE2C_DEVICE_ADDRESS << 1, reg, data};
	/* put into wr_buf since it gets written first */
	uint8_t cyc_buf;

	/** start with thsel low */
	gpio_pin_set_dt(&drv_cfg->thsel, 0);
	/** Clock device before writing to prepare device for communication */
	prv_clock_bitbang(dev, T5838_FAKE2C_PRE_WRITE_CYCLES, T5838_FAKE2C_CLK_PERIOD_US);
	/** write start condition*/
	gpio_pin_set_dt(&drv_cfg->thsel, 1);
	prv_clock_bitbang(dev, T5838_FAKE2C_START_PILOT_CLKS, T5838_FAKE2C_CLK_PERIOD_US);
	/** write first space before writing data */
	gpio_pin_set_dt(&drv_cfg->thsel, 0);
	prv_clock_bitbang(dev, T5838_FAKE2C_SPACE, T5838_FAKE2C_CLK_PERIOD_US);
	/** write data */
	for (int i = 0; i < 3; i++) {
		for (int j = 0; j < 8; j++) {

			if (wr_buf[i] & BIT(7 - j)) {
				/* sending one */
				cyc_buf = T5838_FAKE2C_ONE;
			} else {
				/* sending 0 */
				cyc_buf = T5838_FAKE2C_ZERO;
			}
			/** Send data bit */
			gpio_pin_set_dt(&drv_cfg->thsel, 1);
			prv_clock_bitbang(dev, cyc_buf, T5838_FAKE2C_CLK_PERIOD_US);
			/** Send space */
			gpio_pin_set_dt(&drv_cfg->thsel, 0);
			prv_clock_bitbang(dev, T5838_FAKE2C_SPACE, T5838_FAKE2C_CLK_PERIOD_US);
		}
	}
	/**write stop condition */
	gpio_pin_set_dt(&drv_cfg->thsel, 1);
	prv_clock_bitbang(dev, T5838_FAKE2C_STOP, T5838_FAKE2C_CLK_PERIOD_US);
	gpio_pin_set_dt(&drv_cfg->thsel, 0);

	/**keep clock to apply */
	prv_clock_bitbang(dev, T5838_FAKE2C_POST_WRITE_CYCLES, T5838_FAKE2C_CLK_PERIOD_US);
	return 0;
}

int prv_aad_unlock_sequence(const struct device *dev)
{
	struct t5838_aad_drv_data *drv_data = dev->data;
	int err;

	/** This is unlock sequence for AAD modes provided in datasheet. */
	struct t5838_address_data_pair write_data[] = {
		{0x5C, 0x00}, {0x3E, 0x00}, {0x6F, 0x00}, {0x3B, 0x00}, {0x4C, 0x00},
	};

	err = prv_multi_reg_write(dev, write_data, ARRAY_SIZE(write_data));
	if (err < 0) {
		LOG_ERR("prv_t5838_multi_reg_write, err: %d", err);
		return err;
	}
	drv_data->aad_unlocked = true;

	return 0;
}

static void prv_wake_cb_handler(const struct device *dev, struct gpio_callback *cb, uint32_t pins)
{
	struct t5838_aad_drv_data *drv_data = CONTAINER_OF(cb, struct t5838_aad_drv_data, wake_cb);
	const struct t5838_aad_drv_cfg *drv_cfg = drv_data->aad_cfg;
	if (drv_data->int_handled) {
		return;
	}
	drv_data->int_handled = true;
	int err = 0;
	err = gpio_pin_interrupt_configure_dt(&drv_cfg->wake, GPIO_INT_DISABLE);
	if (err) {
		LOG_ERR("gpio_pin_interrupt_configure, err: %d", err);
		return;
	}
	LOG_INF("WAKE PIN INTERRUPT");

	if (drv_data->wake_handler) {
		drv_data->wake_handler(dev);
	}
}

int t5838_reset(const struct device *dev)
{

	const struct t5838_aad_drv_cfg *drv_cfg = dev->config;
	struct t5838_aad_drv_data *drv_data = dev->data;
	if (!drv_cfg->micen_available) {
		return -ENOTSUP;
	}
	gpio_pin_set_dt(&drv_cfg->micen, 0);

	drv_data->aad_unlocked = false;
	drv_data->aad_enabled_mode = T5838_AAD_SELECT_NONE;

	/* Wait for device to power down and reapply power to reset it */
	k_sleep(K_MSEC(T5838_RESET_TIME_MS));
	gpio_pin_set_dt(&drv_cfg->micen, 1);

	return 0;
}

int t5838_aad_wake_clear(const struct device *dev)
{
	const struct t5838_aad_drv_cfg *drv_cfg = dev->config;
	struct t5838_aad_drv_data *drv_data = dev->data;
	int err;
	if (drv_data->cb_configured) {
		err = gpio_pin_interrupt_configure_dt(&drv_cfg->wake, GPIO_INT_LEVEL_ACTIVE);
		if (err) {
			LOG_ERR("gpio_pin_interrupt_configure, err: %d", err);
			return err;
		}
	}
	drv_data->int_handled = false;
	return 0;
}

int prv_aad_mode_set(const struct device *dev, struct t5838_address_data_pair *write_array,
		     uint8_t write_array_size)
{
	const struct t5838_aad_drv_cfg *drv_cfg = dev->config;
	struct t5838_aad_drv_data *drv_data = dev->data;
	int err;

	/** Make sure there is no PDM transfer in progress, and we can take clock signal */
	struct t5838_drv_data *pdm_data = drv_cfg->pdm_dev->data;
	if (pdm_data->active) {
		LOG_ERR("Cannot write to device while pdm is active");
		return -EBUSY;
	}
	if (drv_data->aad_unlocked == false) {
		err = prv_aad_unlock_sequence(dev);
		if (err < 0) {
			LOG_ERR("error writing aad unlock sequence, err: %d", err);
			return err;
		}
	}

	err = prv_multi_reg_write(dev, write_array, write_array_size);
	if (err < 0) {
		LOG_ERR("prv_t5838_multi_reg_write, err: %d", err);
		return err;
	}

	t5838_aad_sleep(dev);

	pdm_data->aad_child_dev = dev;
	/**Configure interrupts */
	if (drv_data->cb_configured == false) {
		drv_data->int_handled = false;
		gpio_init_callback(&drv_data->wake_cb, prv_wake_cb_handler, BIT(drv_cfg->wake.pin));

		err = gpio_add_callback(drv_cfg->wake.port, &drv_data->wake_cb);
		if (err) {
			LOG_ERR("gpio_add_callback, err: %d", err);
			return err;
		}
		drv_data->cb_configured = true;
	}
	err = gpio_pin_interrupt_configure_dt(&drv_cfg->wake, GPIO_INT_LEVEL_ACTIVE);
	if (err) {
		LOG_ERR("gpio_pin_interrupt_configure_dt, err: %d", err);
		return err;
	}
	return 0;
}

int t5838_aad_a_mode_set(const struct device *dev, struct t5838_aad_a_conf *aadconf)
{
	struct t5838_aad_drv_data *drv_data = dev->data;
	int err;

	struct t5838_address_data_pair write_data[] = {
		{T5838_REG_AAD_MODE, 0x00},
		{T5838_REG_AAD_A_LPF, aadconf->aad_a_lpf},
		{T5838_REG_AAD_A_THR, aadconf->aad_a_thr},
		{T5838_REG_AAD_MODE, T5838_AAD_SELECT_A},
	};
	err = prv_aad_mode_set(dev, write_data, ARRAY_SIZE(write_data));
	if (err < 0) {
		LOG_ERR("prv_aad_mode_set, err: %d", err);
		return err;
	}
	drv_data->aad_enabled_mode = T5838_AAD_SELECT_A;
	return 0;
}

int t5838_aad_d1_mode_set(const struct device *dev, struct t5838_aad_d_conf *aadconf)
{
	struct t5838_aad_drv_data *drv_data = dev->data;
	int err;
	AAD_D_CONFIG_BUILDER(write_data, T5838_AAD_SELECT_D1);
	err = prv_aad_mode_set(dev, write_data, ARRAY_SIZE(write_data));
	if (err < 0) {
		LOG_ERR("prv_aad_mode_set, err: %d", err);
		return err;
	}
	drv_data->aad_enabled_mode = T5838_AAD_SELECT_D1;
	return 0;
}

int t5838_aad_d2_mode_set(const struct device *dev, struct t5838_aad_d_conf *aadconf)
{
	struct t5838_aad_drv_data *drv_data = dev->data;
	int err;
	AAD_D_CONFIG_BUILDER(write_data, T5838_AAD_SELECT_D2);
	err = prv_aad_mode_set(dev, write_data, ARRAY_SIZE(write_data));
	if (err < 0) {
		LOG_ERR("prv_aad_mode_set, err: %d", err);
		return err;
	}
	drv_data->aad_enabled_mode = T5838_AAD_SELECT_D2;
	return 0;
}

int t5838_aad_mode_disable(const struct device *dev)
{

	const struct t5838_aad_drv_cfg *drv_cfg = dev->config;
	struct t5838_aad_drv_data *drv_data = dev->data;
	struct t5838_drv_data *pdm_data = drv_cfg->pdm_dev->data;
	int err;
	/** Set AAD mode to zero while we configure device to avoid problems */
	err = prv_reg_write(dev, T5838_REG_AAD_MODE, 0);
	if (err < 0) {
		LOG_ERR("prv_t5838_reg_write, err: %d", err);
		return err;
	}
	/** Disable interrupts */
	err = gpio_pin_interrupt_configure_dt(&drv_cfg->wake, GPIO_INT_DISABLE);
	if (err) {
		LOG_ERR("gpio_pin_interrupt_configure_dt, err: %d", err);
		return err;
	}
	drv_data->aad_enabled_mode = T5838_AAD_SELECT_NONE;
	drv_data->aad_unlocked = false;
	pdm_data->aad_child_dev = NULL;
	return 0;
}

static int t5838_aad_init(const struct device *dev)
{
	const struct t5838_aad_drv_cfg *drv_cfg = dev->config;
	struct t5838_aad_drv_data *drv_data = dev->data;
	int err;
	/* T5838 specific configuration */
	err = gpio_pin_configure_dt(&drv_cfg->wake, GPIO_INPUT);
	if (err < 0) {
		LOG_ERR("gpio_pin_configure_dt, err: %d", err);
		return err;
	}
	err = gpio_pin_configure_dt(&drv_cfg->thsel, GPIO_OUTPUT);
	if (err < 0) {
		LOG_ERR("gpio_pin_configure_dt, err: %d", err);
		return err;
	}
	err = gpio_pin_configure_dt(&drv_cfg->pdmclk, GPIO_OUTPUT);
	if (err < 0) {
		LOG_ERR("gpio_pin_configure_dt, err: %d", err);
		return err;
	}
	/* set micen low to turn of microphone and make sure we start in reset state*/
	if (drv_cfg->micen_available) {
		err = gpio_pin_configure_dt(&drv_cfg->micen, GPIO_OUTPUT);

		if (err < 0) {
			LOG_ERR("gpio_pin_configure_dt, err: %d", err);
			return err;
		}

		t5838_reset(dev);
	}
	drv_data->aad_cfg = drv_cfg;
	return 0;
}
